// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Card CardVariants renders 1`] = `
<Fragment>
  <h2
    id="card-variants"
  >
    Card Variants
  </h2>
  <p>
    You don\`t have to use all sections of a card, you can use different combinations as you see fit.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6 col-xl-4 mb-3"
      >
        <Card
          smallText="Small card text"
          text="Card text"
          title={
            <h3>
              My Custom card
            </h3>
          }
          type="primary"
        >
          <MediaObject
            heading="75%"
            icon="verified_user"
            muted={true}
            size="sm"
            text="Complete"
            textSmall={true}
          />
        </Card>
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4 mb-3"
      >
        <Card
          smallText="This is some small text"
          textSection={
            Array [
              "This is a lot of text",
              "With some more text",
              "And then even some more",
              "Is it really possible to have this much text in one card?",
              "Yes!",
            ]
          }
          title={
            <h3>
              Text card
            </h3>
          }
          type="primary"
        />
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4"
      >
        <Card
          imgSrc="https://picsum.photos/300/?random"
          text="This is a card with an image and body"
          title={
            <h3>
              Image card
            </h3>
          }
          type="secondary"
        />
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card DefaultBehaviour renders 1`] = `
<Fragment>
  <h2
    id="default-behaviour"
  >
    Default behaviour
  </h2>
  <p>
    The cards component is a flexible content container. You can use them with and without footers, headers, pictures, buttons and more. Cards have no width constraint so they will fill the parent container. Use cards in combination with our 
    <Link
      to="/docs/core/grid"
    >
      grid
    </Link>
     to decide how they will grow and shrink.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6 col-xl-4 mb-3"
      >
        <Card
          btnTxt="Button"
          content={
            <ul
              className="list pt-3"
            >
              <li>
                <span
                  className="font-weight-bold"
                >
                  Card number:
                </span>
                 4563 5648 5642
              </li>
              <li>
                <span
                  className="font-weight-bold"
                >
                  Balance:
                </span>
                 2500,- 
              </li>
            </ul>
          }
          imgSrc="https://picsum.photos/300/?random"
          text="This paragraph contains some text about the person displayed above."
          title={
            <MediaObject
              heading="Bob Corlsan"
              icon="account_circle"
              size="sm"
              text="bob.corlsan@payex.com"
              textSmall={true}
            />
          }
          type="primary"
        />
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4 mb-3"
      >
        <Card
          footerLinkTxt="Footer link"
          text="Descriptive text to put inside the card, could contain a lot."
          title={
            <h3>
              Card secondary
            </h3>
          }
          type="secondary"
        >
          <MediaObject
            heading="725 NOK"
            icon="account_balance"
            muted={true}
            size="sm"
            text="Outstanding balance"
            textSmall={true}
          />
        </Card>
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4"
      >
        <Card
          btnTxt="Button"
          footerLinkTxt="Footer link"
          imgSrc="https://picsum.photos/300/?random"
          smallText="And the small text"
          text="Descriptive text to put inside the card, could contain a lot."
          title={
            <h3>
              Card plain
            </h3>
          }
          type="plain"
        >
          <MediaObject
            heading="75%"
            icon="verified_user"
            muted={true}
            size="sm"
            text="Complete"
            textSmall={true}
          />
        </Card>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Cards are meant to display smaller items and is not intended to span the entire width of a page. See 
    <Link
      to="/docs/components/panel"
    >
      panel
    </Link>
     if the card component is too narrow.
  </p>
  <DefaultBehaviour />
  <CardVariants />
</DocContainer>
`;
